--- a/css/barbearia.css
+++ b/css/barbearia.css
@@ -17,10 +17,20 @@ main {
     font-size: 2em;
 }
 
-.cards {
+.card-pai
+{
+    width: 100%;
     display: flex;
     justify-content: center;
+}
+
+.cards {
+    display: flex;
+    /*justify-content: center;*/
     gap: 100px;
+    flex-wrap: wrap;
+    width: 80%;
+    justify-content: center;
 }
 
 .card {
@@ -104,3 +114,18 @@ footer p {
     color: #fff;
 }
 
+.next
+{
+    margin-top: 2%;
+}
+
+.next button
+{
+    cursor: pointer;
+    padding: 10px;
+}
+
+.next .estou-aki 
+{
+    background: #ffcc00;
+}
