--- a/css/barber.css
+++ b/css/barber.css
@@ -4,6 +4,22 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #222;
+    color: #fff;
+}
+
+.btn-cadastrar {
+    color: #111;
+    background-color: #f39c12;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-weight: 600;
+    text-decoration: none;
+}
+
+
 main {
     padding: 40px 0;
 }
@@ -85,6 +101,7 @@ main {
 .btn:hover {
     background-color: #333;
     color: #ffcc00;
+    cursor: pointer;
 }
 
 footer {
@@ -178,16 +195,4 @@ footer p {
 .servico-detalhe h3 {
     margin-bottom: 10px;
     color: #f39c12;
-}
-
-.btn {
-    display: block;
-    width: max-content;
-    margin: 20px auto;
-    background-color: #f39c12;
-    color: #111;
-    padding: 10px 20px;
-    text-decoration: none;
-    border-radius: 5px;
-    font-weight: 600;
 }
