--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -1,8 +1,35 @@
+.btn {
+    width: 30%;
+    padding: 12px;
+    margin-top: 20px;
+    background-color: #f39c12;
+    color: #121212;
+    font-size: 16px;
+    font-weight: bold;
+    border: 1px solid transparent;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.btn:hover {
+    background-color: transparent;
+    color: #f39c12;
+    border: 1px solid #f39c12;
+}
+
 /* Estilo geral */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #1e1e1e;;
+    color: #f5f5f5;
+    min-height: 100vh;
 }
 
 .container {
@@ -204,3 +231,4 @@
 h1{
     color: #f39c12;
 }
+
