--- a/css/perfil.css
+++ b/css/perfil.css
@@ -1,29 +1,139 @@
+
 /* Estilos globais */
 body {
     font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
     background-color: #1e1e1e;
     color: #fff;
-    height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 
-.btn {
-    display: inline-block;
-    color: #111;
+
+.perfil-container {
+    width: 80%;
+    margin: 20px auto;
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+}
+
+.perfil-info {
+    background-color: #333;
+    border-radius: 10px;
+    padding: 20px;
+    width: 30%;
+    text-align: center;
+}
+
+.perfil-info img {
+    width: 350px;
+    height: 350px;
+    border-radius: 10px;
+    margin-bottom: 35px;
+    margin-top: 15px;
+}
+
+.perfil-info h2 {
+    margin-top: 10px;
+    color: #f39c12;
+}
+
+.perfil-info button {
     background-color: #f39c12;
-    padding: 10px 20px;
+    color: #111;
+    border: none;
+    padding: 8px 16px;
     border-radius: 5px;
+    cursor: pointer;
     font-weight: 600;
-    text-decoration: none;
+    margin-top: 15px;
+}
+
+.perfil-info button:hover {
+    background-color: #d78d0e;
+}
+
+.perfil-opcoes {
+    background-color: #333;
+    border-radius: 10px;
+    padding: 20px;
+    width: 65%;
+}
+
+.perfil-opcoes h3 {
+    color: #f39c12;
+    margin-bottom: 15px;
+}
+
+.opcao {
+    background-color: #444;
+    padding: 15px;
+    border-radius: 5px;
+    margin-bottom: 10px;
     cursor: pointer;
     transition: background-color 0.3s;
 }
 
-.btn:hover {
-    background-color: #e4f312e0;
+.opcao:hover {
+    background-color: #555;
 }
 
-.container {
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.modal-content {
+    background-color: #333;
+    margin: auto;
+    padding: 20px;
+    border-radius: 10px;
+    width: 40%;
+    color: #fff;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.modal-content button{
+    background-color: #f39c12;
+    color: #111;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: 600;
+    margin-top: 15px;   
+}
+
+.modal-content input{
+    padding: 8px 16px;
+    border-radius: 5px;
+    border: none;
+}
+
+.modal-content .close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 25px;
+    color: #f39c12;
+    cursor: pointer;
+}
+
+.modal-content h2 {
+    color: #f39c12;
+}
+
+h2{
     text-align: center;
+    color: #f39c12;
 }
