--- a/css/barbearia2.css
+++ b/css/barbearia2.css
@@ -89,11 +89,12 @@ main {
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s;
+    border: 2px solid transparent;
 }
  
 .btn:hover {
     border:2px solid #333;
-    background-color: #ffcc00;
+    background-color: transparent;
     color: #333;
 }
  
