--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -54,6 +54,7 @@ header ul li a#login {
     transition: all 0.3s ease;
     border:transparent 1px solid;
     border-radius:5px;
+    color: #fff;
 }
  
 header ul li a#login:hover {
@@ -80,3 +81,12 @@ header ul li a#login:hover {
     transition: all 0.3s ease;
 }
  
+.imagem-perfil {
+    position: absolute;
+    width: 2.9%;  
+    border-radius: 50%;  
+    margin-left: 1%;
+    margin-top: -0.8%;
+    object-fit: cover;
+    border: 1px solid #ccc;
+}
