--- a/css/style2.css
+++ b/css/style2.css
@@ -108,6 +108,7 @@ footer p {
     padding-top: 25px;
     background-color: #333;
     padding-bottom: 30px;
+    width: 100%;
 }
 
 .avaliacoes h2 {
@@ -236,3 +237,51 @@ a .icon
     height: 32px;
 }
  
+
+.promo-section {
+    display: flex;
+    padding: 2em 0;
+    background-color: #111;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+}
+
+.container-promo {
+    display: flex;
+    align-items: center;
+}
+
+.promo-texto h2 {
+    font-size: 2rem;
+    color: #ffffff;
+    margin-bottom: 0.5em;
+}
+
+.promo-texto p {
+    font-size: 1rem;
+    color: #ddd;
+    margin-bottom: 1em;
+}
+
+.btn-promo {
+    background-color: #f39c12;
+    color: #000000;
+    padding: 0.5em 1.5em;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+.promo-imagem img {
+    width: 300px; 
+    height: auto;
+}
+
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
