--- a/css/perfil.css
+++ b/css/perfil.css
@@ -74,7 +74,6 @@
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 100px;
     left: 0;
     top: 0;
     width: 100%;
@@ -90,12 +89,9 @@
     width: 40%;
     color: #fff;
     position: relative;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
 }
 
-.modal-content button{
+.btn{
     background-color: #f39c12;
     color: #111;
     border: none;
@@ -103,13 +99,16 @@
     border-radius: 5px;
     cursor: pointer;
     font-weight: 600;
-    margin-top: 15px;   
+    margin-top: 15px;
+    width: 20%;
 }
 
-.modal-content input{
+#inputs{
     padding: 8px 16px;
     border-radius: 5px;
     border: none;
+    margin-bottom: 4%;
+    width: 70%;
 }
 
 .modal-content .close {
@@ -128,4 +127,18 @@
 h2{
     text-align: center;
     color: #f39c12;
+}
+
+
+form{
+    display: flex;
+    gap: 5px;
+    flex-direction: column;
+    align-items: center;
+}
+
+label{
+    display: flex;
+    width: 74%;
+    justify-content: flex-start;
 }
