--- a/css/style2.css
+++ b/css/style2.css
@@ -14,6 +14,8 @@ body {
     background-color: #333;
     margin-top: 50px;
     border-radius: 10px;
+    width: 100%;
+    max-width: 100%;
 }
 
 .hero img {
