--- a/css/perfil.css
+++ b/css/perfil.css
@@ -1,6 +1,3 @@
-
-
-
 .perfil-container {
     width: 80%;
     margin: 20px auto;
@@ -23,6 +20,7 @@
     border-radius: 10px;
     margin-bottom: 35px;
     margin-top: 15px;
+    object-fit: cover;
 }
 
 .perfil-info h2 {
