--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -83,10 +83,11 @@ header ul li a#login:hover {
  
 .imagem-perfil {
     position: absolute;
-    width: 2.5%;  
+    width: 50px;  
+    height: 50px;  
     border-radius: 50%;  
     margin-left: 1%;
-    margin-top: -0.8%;
+    margin-top: -1%;
     object-fit: cover;
-    border: 1px solid #ccc;
+    border: 2px solid #ccc;
 }
