--- a/css/empresa.css
+++ b/css/empresa.css
@@ -239,7 +239,14 @@ a .icon
     height: 32px;
 }
  
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+
+/* Promo Section */
 .promo-section {
     display: flex;
     padding: 2em 0;
@@ -248,24 +255,41 @@ a .icon
     align-items: center;
     width: 80%;
     border-radius: 10px;
-    margin-bottom: 5%;
+    margin-top: 5%;
+    margin-bottom: 3%;
 }
 
 .container-promo {
     display: flex;
     align-items: center;
+    flex-direction: row; /* Para alinhar o texto e a imagem lado a lado */
+    justify-content: center;
+}
+
+.promo-texto {
+    max-width: 50%;
+    margin-right: 2em;
+    margin-bottom: 2em;
+}
+
+#empresa {
+    color: #f39c12;
+    font-size: 0.9em;
+    font-weight: bold;
+    margin-bottom: 0.5em;
 }
 
 .promo-texto h2 {
     font-size: 2rem;
     color: #ffffff;
-    margin-bottom: 0.5em;
+    
 }
 
 .promo-texto p {
     font-size: 1rem;
     color: #ddd;
     margin-bottom: 1em;
+    line-height: 1.6;
 }
 
 .btn-promo {
@@ -278,16 +302,120 @@ a .icon
 }
 
 .promo-imagem img {
-    width: 300px; 
+    width: 400px; 
     height: auto;
+    border-radius: 5px; /* Ajuste para bordas arredondadas */
 }
 
-main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+.vantagens {
+    margin-bottom: 5%;
+    color: #fff;
+    padding: 2rem;
 }
 
-#empresa {
+.vantagens h2 {
+    text-align: center;
+    margin-bottom: 3rem;
     color: #f39c12;
+}
+
+.vantagens-lista {
+    display: flex;
+    gap: 7rem;
+    justify-content: center;
+}
+
+.vantagem {
+    background-color: #333;
+    border-radius: 8px;
+    overflow: hidden;
+    width: 300px;
+    position: relative;
+    perspective: 1000px;
+    transition: transform 0.3s ease;
+}
+
+
+.vantagem-texto {
+    padding: 1.5rem;
+    transition: transform 0.3s ease;
+}
+
+.vantagem h3 {
+    font-size: 1.2rem;
+    margin-bottom: 0.5rem;
+    color: #f5f5f5;
+}
+
+.vantagem p {
+    font-size: 1rem;
+    color: #cccccc;
+    margin-bottom: 2.2em;
+}
+
+.vantagem-footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 0.8rem;
+    background: rgba(0, 0, 0, 0.5);
+    color: #f39c12;
+    font-size: 1.1rem;
+    text-align: center;
+}
+
+.estatisticas {
+    background-color: rgba(0, 0, 0, 0.45);
+    color: #fff;
+    padding: 3rem;
+    border-radius: 10px;
+    text-align: center;
+    margin-bottom: 5em;
+    width: 80%;
+}
+
+.estatisticas h2 {
+    color: #f0f0f0;
+    font-size: 2rem;
+    margin-bottom: 2rem;
+}
+
+.estatisticas-cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    justify-content: center;
+}
+
+.card-estatistica {
+    background-color: #333;
+    border-radius: 8px;
+    padding: 2rem 1rem;
+    text-align: center;
+    width: 200px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.card-estatistica:hover {
+    transform: translateY(-10px) scale(1.05);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
+}
+
+.card-estatistica img {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 1rem;
+}
+
+.card-estatistica h3 {
+    color: #ffba00;
+    font-size: 1.8rem;
+    margin-bottom: 0.5rem;
+}
+
+.card-estatistica p {
+    color: #cccccc;
+    font-size: 1rem;
 }
