--- a/css/barber.css
+++ b/css/barber.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    scroll-behavior: smooth;
 }
 
 body {
@@ -10,6 +9,16 @@ body {
     background-color: #222;
     color: #fff;
 }
+
+.btn-cadastrar {
+    color: #111;
+    background-color: #f39c12;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-weight: 600;
+    text-decoration: none;
+}
+
 
 main {
     padding: 40px 0;
@@ -93,7 +102,6 @@ main {
     background-color: #333;
     color: #ffcc00;
     cursor: pointer;
-    border: #ffcc00 1px solid;
 }
 
 footer {
@@ -187,74 +195,4 @@ footer p {
 .servico-detalhe h3 {
     margin-bottom: 10px;
     color: #f39c12;
-}
-
-/* Estilo do Modal */
-.modal {
-    display: none; /* Esconde o modal inicialmente */
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8); /* Escurece o fundo */
-}
-
-.modal-content {
-    position: relative;
-    margin: 10% auto;
-    padding: 20px;
-    background-color: #111;
-    width: 80%;
-    max-width: 600px;
-    border-radius: 8px;
-    text-align: center;
-}
-
-.close {
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    font-size: 24px;
-    cursor: pointer;
-}
-
-.navegacao-datas {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 10px;
-}
-
-.seta {
-    font-size: 24px;
-    margin: 0 10px;
-    cursor: pointer;
-}
-
-.profissionais {
-    margin-top: 20px;
-}
-
-.lista-profissionais img {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    margin: 0 10px;
-    cursor: pointer;
-}
-
-.horarios {
-    margin-top: 20px;
-}
-
-.lista-horarios button {
-    margin: 5px;
-    padding: 10px;
-    border: none;
-    background-color: #333;
-    color: white;
-    cursor: pointer;
-    border-radius: 5px;
 }
