--- a/css/agendamentosbarbeiro.css
+++ b/css/agendamentosbarbeiro.css
@@ -1,11 +1,3 @@
-body {
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #1e1e1e;
-    color: #fff;
-}
-
 /* Estilos básicos */
 body {
     font-family: 'Poppins', sans-serif;
@@ -20,6 +12,10 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
+}
+
+#agendamentos{
+    color: #f39c12;
 }
 
 h2 {
@@ -71,6 +67,8 @@ h2 {
 .tabela-header {
     background-color: #333;
     font-weight: bold;
+    display: flex;
+    justify-content: space-around;
 }
 
 .tabela-linha {
