--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -15,6 +15,10 @@ body {
     flex-direction: column;
 }
 
+#dashboard {
+    color: #f39c12;
+}
+
 h2 {
     text-align: center;
     color: #ffffff;
