tornando o site mais de home

--- a/css/perfil.css
+++ b/css/perfil.css
@@ -87,6 +87,9 @@
     width: 30%;
     color: #fff;
     position: relative;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .btn{
