--- a/css/cadastroBarbearia.css
+++ b/css/cadastroBarbearia.css
@@ -27,17 +27,16 @@
 }
 
 .modal-conteudo {
-    background-color: #fefefe;
+    background-color: #2C2C2C;
     margin: 10% auto;
     padding: 20px;
-    border: 1px solid #888;
     width: 80%;
     max-width: 500px;
     border-radius: 8px;
 }
 
 .fechar {
-    color: #aaa;
+    color: #f39c12;
     float: right;
     font-size: 28px;
     font-weight: bold;
@@ -54,22 +53,24 @@
 input {
     width: 90%;
     padding: 8px;
-    margin-bottom: 10px;
+    margin-bottom: -15px;
     border-radius: 5px;
-    border: 1px solid #ccc;
+    background-color: #3B3B3B;
+    border: none;
+    color: white;
 }
 
 button {
     padding: 10px 15px;
-    background-color: #4CAF50;
-    color: white;
+    background-color: #f39c12;
+    color: rgb(0, 0, 0);
     border: none;
     border-radius: 5px;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #f39c12;
 }
 
 main 
@@ -263,5 +264,21 @@ textarea {
     padding: 10px; /* Espaçamento interno */
     font-size: 14px; /* Tamanho de fonte */
     border-radius: 5px;
-    border: 1px solid #ccc;
+    background-color: #3B3B3B;
+    border: none;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#label {
+    width: 90%;
+}
+
+h2 {
+    text-align: center;
+    color: #f39c12;
 }
