--- a/css/perfil2.css
+++ b/css/perfil2.css
@@ -87,6 +87,9 @@
     width: 30%;
     color: #fff;
     position: relative;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .btn{
@@ -146,4 +149,16 @@ label{
 #labelfoto {
     display: flex;
     justify-content: center; 
+}
+
+#sair{
+    background-color: #f39c12;
+    color: #111;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: 600;
+    margin-top: 15px;
+    width: 20%;
 }
