--- a/css/barber.css
+++ b/css/barber.css
@@ -181,6 +181,7 @@ footer p {
     padding: 20px;
     margin-bottom: 20px;
     border-radius: 10px;
+    width: 80%;
 }
 
 .servico-detalhe img {
@@ -258,4 +259,11 @@ footer p {
     color: white;
     cursor: pointer;
     border-radius: 5px;
+}
+
+.container-valores {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
