--- a/css/barbeariaTeste.css
+++ b/css/barbeariaTeste.css
@@ -1,18 +1,22 @@
 *{padding: 0; margin: 0;}
 
-li a
+.li a
 {
     text-decoration: none;
     color: beige;
 }
 
-li
+.li
 {
+    width: 40%;
     margin-bottom:4%;
 }
 
-ul
+.ul
 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     list-style: none;
 }
 
@@ -45,6 +49,12 @@ ul
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+h1
+{
+    margin-top: 20%;
+    font-size: 2em;
 }
 
 .nomeBaber
