--- a/css/agendamentosbarbeiro.css
+++ b/css/agendamentosbarbeiro.css
@@ -22,19 +22,21 @@ h2 {
     text-align: center;
     color: #ffffff;
     font-size: 2.2rem;
-    margin-bottom: 20px;
+    margin-bottom: 5%;
 }
 
 /* Filtros */
 .filtros {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     margin-bottom: 20px;
+    gap: 20px;
 }
 
 .filtros label {
     font-weight: 500;
     color: #aaa;
+    margin-left: 2%;
 }
 
 .filtros select, .filtros button {
