--- a/css/barber.css
+++ b/css/barber.css
@@ -258,3 +258,110 @@ main {
     flex-direction: column;
     align-items: center;
 }
+
+/* Seção Prestadores */
+.prestadores {
+    background-color: #262626;
+    color: white;
+    padding: 50px 20px;
+    text-align: center;
+}
+
+.container-cards {
+    display: flex;
+    justify-content: center;
+    gap: 10%;
+    flex-wrap: wrap;
+}
+
+.card {
+    width: 290px;
+    height: 370px;
+    background: rgb(38, 38, 38);
+    box-shadow: 7px 5px 10px rgba(0, 0, 0, 0.333);
+}
+
+.imge {
+    height: 70px;
+    background-color: #f39c12;
+}
+
+.imge .Usericon {
+    background-color: #414141;
+    transform: translateX(10px) translateY(10px);
+    width: 50px;
+    height: 45px;
+    border-radius: 10px;
+}
+
+.imge .UserName {
+    background-color: #414141;
+    width: 35%;
+    height: 20px;
+    border-radius: 5px;
+    color: #ccc;
+    font-size: 15px;
+    font-weight: bold;
+    transform: translateX(70px) translateY(-35px);
+}
+
+.imge .Id {
+    background-color: #414141;
+    width: 30%;
+    height: 20px;
+    border-radius: 5px;
+    color: #ccc;
+    font-size: 15px;
+    font-weight: bold;
+    transform: translateX(70px) translateY(-25px);
+}
+
+.Description {
+    background-color: #414141;
+    margin: 6px 5px;
+    height: 225px;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+}
+
+.social-media:before {
+    content: " ";
+    display: block;
+    width: 100%;
+    height: 2px;
+    transform: translateY(10px);
+    background: #414141;
+}
+
+.social-media a {
+    margin-right: 15px;
+    text-decoration: none;
+    color: inherit;
+}
+
+.social-media a:last-child {
+    margin-right: 0;
+}
+
+.social-media a svg {
+    color: #ff5858;
+    transform: translateX(25px) translateY(20px);
+    width: 20px;
+    fill: currentColor;
+}
+
+
+#ftbarber{
+    width: 100%;
+    border-radius: 10px;
+}
+
+#ftclt{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
