--- a/css/cadastroBarbearia.css
+++ b/css/cadastroBarbearia.css
@@ -1,9 +1,7 @@
 #EmpresasD {
-    background-color: #111;
-    width: 80%;
-    padding-bottom: 2rem;
-    padding-top: 2rem;
-    border-radius: 10px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
     margin-top: 5%;
     margin-bottom: 5%;
 }
@@ -11,6 +9,11 @@
 .NovaEmpresa {
     display: flex;
     justify-content: center;
+    background-color: #111;
+    width: 80%;
+    padding-bottom: 2rem;
+    padding-top: 2rem;
+    border-radius: 10px;
 }
 
 /* Modal */
@@ -76,39 +79,43 @@ button:hover {
 main 
 {
     background: linear-gradient(180deg, rgb(30 30 30) 0%, rgb(30 30 30) 80%, rgb(39 39 39) 100%);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin-bottom: -3%;
 }
 
 #empresasAcumuladas {
-    margin-top: 30px;
+    margin: 30px auto; /* Centraliza o grid na página */
     padding: 20px;
-    background-color: #111;
     border-radius: 10px;
-    /*width: 80%;*/
-    margin-bottom: 30px
+    max-width: 90%; /* Define uma largura máxima */
 }
 
 #empresasAcumuladas ul {
-    list-style-type: none;
+    display: grid; /* Ativa o grid layout */
+    grid-template-columns: repeat(3, 1fr); /* Cria colunas flexíveis */
+    gap: 20px; /* Espaçamento entre os itens */
+    list-style-type: none; /* Remove os marcadores da lista */
     padding: 0;
+    margin: 0;
 }
 
-/*#empresasAcumuladas li {
-    margin-bottom: 15px;
-    padding: 10px;
-    background-color:#432f2f;
-    border-radius: 8px;
-    border: 1px solid #ccc;
-}*/
-
 #empresasAcumuladas li {
-    background: #1d1d1d;
+    background: #111;
     border-radius: 8px;
     overflow: hidden;
-    margin-bottom: 15px;
-    padding: 10px;
+    padding: 15px;
+    border: 1px solid #333;
+    color: #fff;
+    transition: transform 0.3s ease; /* Efeito ao passar o mouse */
+}
+
+#empresasAcumuladas li:hover {
+    transform: scale(1.05); /* Aumenta levemente o tamanho ao passar o mouse */
+}
+
+#empresasAcumuladas img {
+    max-width: 100%; /* Ajusta a largura da imagem */
+    height: auto; /* Mantém a proporção da imagem */
+    border-radius: 5px; /* Deixa a imagem com cantos arredondados */
 }
 
 #empresasAcumuladas hr {
@@ -284,4 +291,9 @@ form {
 h2 {
     text-align: center;
     color: #f39c12;
+}
+
+
+h3{
+    text-align: center;
 }
