--- a/css/barber.css
+++ b/css/barber.css
@@ -81,16 +81,16 @@ main {
 
 .avaliacao span {
     font-size: 1.5em;
-    color: #ffcc00;
+    color: #f39c12;
 }
 
 .avaliacao .stars {
     font-size: 1.5em;
-    color: #ffcc00;
+    color: #f39c12;
 }
 
 .btn {
-    background-color: #ffcc00;
+    background-color: #f39c12;
     color: #333;
     padding: 15px 25px;
     text-decoration: none;
@@ -102,7 +102,7 @@ main {
 
 .btn:hover {
     background-color: #333;
-    color: #ffcc00;
+    color: #f39c12;
     cursor: pointer;
 }
 
@@ -223,21 +223,50 @@ main {
     align-items: center;
     justify-content: center;
     margin-top: 10px;
+    margin-bottom: 10%;
+    gap: 15px; /* Espaçamento entre os itens */
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.2rem;
+    color: #fff; /* Cor do texto */
 }
+
 .seta {
-    font-size: 24px;
-    margin: 0 10px;
+    background: linear-gradient(145deg, #333, #444); /* Gradiente para botões */
+    color: #fff; /* Cor da seta */
+    border: none;
+    border-radius: 50%;
+    width: 45px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem; /* Tamanho da seta */
     cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
 }
+
+.seta:hover {
+    background: linear-gradient(145deg, #444, #555); /* Cor de destaque no hover */
+    transform: scale(1.1); /* Leve ampliação no hover */
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
+}
+
+.seta:active {
+    transform: scale(0.95); /* Leve redução ao clicar */
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.4);
+}
+
 .profissionais {
     margin-top: 20px;
 }
 .lista-profissionais img {
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     margin: 0 10px;
     cursor: pointer;
+    object-fit: cover;
 }
 .horarios {
     margin-top: 20px;
@@ -259,99 +288,6 @@ main {
     align-items: center;
 }
 
-/* Seção Prestadores */
-.prestadores {
-    background-color: #262626;
-    color: white;
-    padding: 50px 20px;
-    text-align: center;
-}
-
-.container-cards {
-    display: flex;
-    justify-content: center;
-    gap: 10%;
-    flex-wrap: wrap;
-}
-
-.card {
-    width: 290px;
-    height: 370px;
-    background: rgb(38, 38, 38);
-    box-shadow: 7px 5px 10px rgba(0, 0, 0, 0.333);
-}
-
-.imge {
-    height: 70px;
-    background-color: #f39c12;
-}
-
-.imge .Usericon {
-    background-color: #414141;
-    transform: translateX(10px) translateY(10px);
-    width: 50px;
-    height: 45px;
-    border-radius: 10px;
-}
-
-.imge .UserName {
-    background-color: #414141;
-    width: 35%;
-    height: 20px;
-    border-radius: 5px;
-    color: #ccc;
-    font-size: 15px;
-    font-weight: bold;
-    transform: translateX(70px) translateY(-35px);
-}
-
-.imge .Id {
-    background-color: #414141;
-    width: 30%;
-    height: 20px;
-    border-radius: 5px;
-    color: #ccc;
-    font-size: 15px;
-    font-weight: bold;
-    transform: translateX(70px) translateY(-25px);
-}
-
-.Description {
-    background-color: #414141;
-    margin: 6px 5px;
-    height: 225px;
-    border-radius: 10px;
-    overflow: hidden;
-    position: relative;
-    text-align: center;
-}
-
-.social-media:before {
-    content: " ";
-    display: block;
-    width: 100%;
-    height: 2px;
-    transform: translateY(10px);
-    background: #414141;
-}
-
-.social-media a {
-    margin-right: 15px;
-    text-decoration: none;
-    color: inherit;
-}
-
-.social-media a:last-child {
-    margin-right: 0;
-}
-
-.social-media a svg {
-    color: #ff5858;
-    transform: translateX(25px) translateY(20px);
-    width: 20px;
-    fill: currentColor;
-}
-
 
 #ftbarber{
     width: 100%;
@@ -365,3 +301,42 @@ main {
     display: block;
 }
 
+.btn-img img {
+    width: 32px; /* Largura da imagem */
+    height: 32px; /* Altura da imagem */
+    cursor: pointer; /* Muda o cursor ao passar o mouse */
+    transform: scaleX(-1); /* Inverte horizontalmente */
+    transition: none;
+    border-radius: 15px;
+    position: absolute;
+    left: 390px;
+    top: 165px;
+}
+
+.btn-img img:hover {
+    transform: scaleX(-1); 
+}
+
+.icone-voltar {
+    width: 32px; /* Largura da imagem */
+    height: 32px; /* Altura da imagem */
+    cursor: pointer; /* Muda o cursor ao passar o mouse */
+    transition: transform 0.3s; /* Adiciona um efeito ao passar o mouse */
+}
+
+.icone-voltar:hover {
+    transform: scale(1.1); /* Aumenta levemente a imagem ao passar o mouse */
+}
+
+#insta {
+    color: #f39c12;
+}
+
+.modal h2 {
+    margin-bottom: 10%;
+    color: #f39c12;
+}
+
+.modal h3 {
+    margin-bottom: 5%;
+}
